--- a/StarWarsCharsMVVM/View/CharacterWindow.xaml
+++ b/StarWarsCharsMVVM/View/CharacterWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:StarWarsCharsMVVM.View"
         xmlns:vm="clr-namespace:StarWarsCharsMVVM.ViewModel"
         mc:Ignorable="d"
-        Title="CharacterWindow" Height="300" Width="350">
+        Title="CharacterWindow" Height="275" Width="350">
     <Window.Resources>
         <vm:CharacterVM x:Key="vm" />
     </Window.Resources>
@@ -16,28 +16,39 @@
             <ColumnDefinition Width="145" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <StackPanel Background="#050505">
+        <Rectangle Grid.Column="0" 
+                   Grid.ColumnSpan="2">
+            <Rectangle.Fill>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#8c9ea3" Offset="1" />
+                    <GradientStop Color="#2a4158" Offset="0" />
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <StackPanel Style="{StaticResource stackPanelStyle}">
             <TextBlock Text="Search for a character:" 
-                       Style="{StaticResource textBlockStyle1}"/>
-            <TextBox Text="{Binding Query, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                       Style="{StaticResource headerTextBlockStyle}"
+                       Margin="5,5,5,10"
+                       />
+            <TextBox Style="{StaticResource textBoxStyle}" Text="{Binding Query, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             <Button Content="Search"
                     Command="{Binding SearchCommand}"
                     CommandParameter="{Binding Query}"
-                    Margin="0,5,0,5" />
+                    Style="{StaticResource buttonStyle}" />
             <ListView BorderThickness="0" 
-                      Background="Black"
+                      Style="{StaticResource listViewStyle}"
                       ItemsSource="{Binding Characters}"
                       SelectedValue="{Binding SelectedCharacter}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
-                            <TextBlock />
+                            <TextBlock Style="{StaticResource listViewTextBlockStyle}" Text="{Binding name}"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
         </StackPanel>
-        <StackPanel Grid.Column="1" Background="#050505">
+        <StackPanel Grid.Column="1" Style="{StaticResource stackPanelStyle}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -48,42 +59,38 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <TextBlock Text="Character Information:"
-                           Style="{StaticResource textBlockStyle1}"
+                           Style="{StaticResource headerTextBlockStyle}"                      
                            Margin="5,5,5,10"
                            Grid.ColumnSpan="2"/>
                 <StackPanel Grid.Row="1" Grid.Column="0">
                     <TextBlock Text="Name:"
-                       Style="{StaticResource textBlockStyle2}"/>
+                       Style="{StaticResource textBlockStyle1}"/>
                     <TextBlock Text="Height:"
-                       Style="{StaticResource textBlockStyle2}"/>
+                       Style="{StaticResource textBlockStyle1}"/>
                     <TextBlock Text="Weight:"
-                       Style="{StaticResource textBlockStyle2}"/>
+                       Style="{StaticResource textBlockStyle1}"/>
                     <TextBlock Text="Hair Colour:"
-                       Style="{StaticResource textBlockStyle2}"/>
+                       Style="{StaticResource textBlockStyle1}"/>
                     <TextBlock Text="Skin Colour:"
-                       Style="{StaticResource textBlockStyle2}"/>
+                       Style="{StaticResource textBlockStyle1}"/>
                     <TextBlock Text="Eye Colour:"
-                       Style="{StaticResource textBlockStyle2}"/>
+                       Style="{StaticResource textBlockStyle1}"/>
                     <TextBlock Text="Year of Birth:"
-                       Style="{StaticResource textBlockStyle2}"/>
+                       Style="{StaticResource textBlockStyle1}"/>
                     <TextBlock Text="Gender:"
-                       Style="{StaticResource textBlockStyle2}"/>
-                    <TextBlock Text="Homeworld:"
-                       Style="{StaticResource textBlockStyle2}"/>
+                       Style="{StaticResource textBlockStyle1}"/>
                 </StackPanel>
                 <StackPanel Grid.Row="1"
                             Grid.Column="1">
-                    <TextBox Text="Han" Style="{StaticResource textBoxStyle}"/>
-                    <TextBox Text="185cm" Style="{StaticResource textBoxStyle}"/>
-                    <TextBox Text="85kg" Style="{StaticResource textBoxStyle}"/>
-                    <TextBox Text="Brown" Style="{StaticResource textBoxStyle}"/>
-                    <TextBox Text="White" Style="{StaticResource textBoxStyle}"/>
-                    <TextBox Text="Brown" Style="{StaticResource textBoxStyle}"/>
-                    <TextBox Text="28BBY" Style="{StaticResource textBoxStyle}"/>
-                    <TextBox Text="Male" Style="{StaticResource textBoxStyle}"/>
-                    <TextBox Text="Corellia" Style="{StaticResource textBoxStyle}"/>
-
-                    
+                    <TextBox Text="{Binding SelectedCharacter.name}" Style="{StaticResource textBoxStyle}"/>
+                    <TextBox Text="{Binding SelectedCharacter.height}" Style="{StaticResource textBoxStyle}"/>
+                    <TextBox Text="{Binding SelectedCharacter.mass}" Style="{StaticResource textBoxStyle}"/>
+                    <TextBox Text="{Binding SelectedCharacter.hair_color}" Style="{StaticResource textBoxStyle}"/>
+                    <TextBox Text="{Binding SelectedCharacter.skin_color}" Style="{StaticResource textBoxStyle}"/>
+                    <TextBox Text="{Binding SelectedCharacter.eye_color}" Style="{StaticResource textBoxStyle}"/>
+                    <TextBox Text="{Binding SelectedCharacter.birth_year}" Style="{StaticResource textBoxStyle}"/>
+                    <TextBox Text="{Binding SelectedCharacter.gender}" Style="{StaticResource textBoxStyle}"/>
+                                       
                 </StackPanel>
                 
             </Grid>
