--- a/StarWarsCharsMVVM/View/CharacterWindow.xaml
+++ b/StarWarsCharsMVVM/View/CharacterWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:StarWarsCharsMVVM.View"
         xmlns:vm="clr-namespace:StarWarsCharsMVVM.ViewModel"
         mc:Ignorable="d"
-        Title="CharacterWindow" Height="275" Width="350">
+        Title="Characters" Height="275" Width="350">
     <Window.Resources>
         <vm:CharacterVM x:Key="vm" />
     </Window.Resources>
