--- a/StarWarsCharsMVVM/View/InitialWindow.xaml
+++ b/StarWarsCharsMVVM/View/InitialWindow.xaml
@@ -58,7 +58,7 @@
         </StackPanel>
         <StackPanel Grid.Column="2" Margin="0,20,0,0">
             <Button Style="{StaticResource CircleButton}"
-                Command="{Binding OpenCharactersCommand}"
+                Command="{Binding OpenPlanetsCommand}"
                     Content=""
                 Width="60"
                 Height="60"/>
